added page navigation

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -12,7 +12,8 @@
     .logo {
         flex-grow: 1;
         margin: auto 0;
-        // vertical-align: center;
+        color: #000000D9;
+        text-decoration: none;
     }
 
     .header_btn {
