--- a/src/components/articleItem/articleItem.scss
+++ b/src/components/articleItem/articleItem.scss
@@ -8,16 +8,23 @@
     row-gap: 4px;
     
     width: 908px;
-    height: 101px;
+    height: 97px;
     padding: 15px 14px 24px 16px;
     margin-top: 26px;
 
+    border: 2px solid #FFFFFF;
     background-color: #FFFFFF;
     box-shadow: 0px 4px 12px 0px #00000026;
 
     font-size: 12px;
     line-height: 22px;
     color: #000000BF;
+
+    transition-duration: 0.3s;
+
+    &:hover {
+        border: 2px solid #1890FF;
+    }
 
     &__group-1 {
         grid-area: group-1;
