--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -1,7 +1,8 @@
 .main {
     background-color: #EBEEF3;
-    width: 100vw;
-    height: 100vh;
+    // width: 100vw;
+    // height: 100%;
+    padding-bottom: 64px;
 
     display: flex;
     flex-direction: column;
