work with the server has been moved to a separate file

--- a/src/components/articleItem/articleItem.scss
+++ b/src/components/articleItem/articleItem.scss
@@ -1,6 +1,4 @@
 .article-item--max {
-    
-
     .article-item__description {
         color: #00000080;
     }
@@ -26,4 +24,5 @@
     font-size: 12px;
     line-height: 22px;
     color: #000000BF;
+    word-break: break-all;
 }
