--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -1,7 +1,7 @@
 .main {
     background-color: #EBEEF3;
     // width: 100vw;
-    // height: 100%;
+    min-height: 100vh;
     padding-bottom: 64px;
 
     display: flex;
