--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,19 +1,32 @@
 .header {
     height: 48px;
-    width: 98%;
     padding: 16px 22px;
 
     display: flex;
+    gap: 27px;
+    align-items: center;
 
     font-size: 18px;
     line-height: 28px;
     text-align: left;
 
+    & a {
+        text-decoration: none;
+    }
+
     .logo {
         flex-grow: 1;
         margin: auto 0;
         color: #000000D9;
+    }
+
+    &_user {
+        display: flex;
+        align-items: center;
         text-decoration: none;
+        
+        color: #000000D9;
+        gap: 13px;
     }
 
     .header_btn {
@@ -23,9 +36,25 @@
         height: 51px;
         width: 109px;
 
-        &-register {
+        &--register,
+        &--create {
             color: #52C41A;
             border-color: #52C41A;
+        }
+
+        &--create {
+            width: 100%;
+            height: 2em;
+            padding: 6px 10px;
+
+
+            font-size: 14px;
+            line-height: 22px;
+        }
+
+        &--out {
+            color: #000000BF;
+            border-color: #000000BF
         }
     }
 }
