--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -1,8 +1,8 @@
 .main {
     background-color: #EBEEF3;
     // width: 100vw;
-    min-height: 100vh;
-    padding-bottom: 64px;
+    min-height: 100vh;;
+    padding: 26px 10%;
 
     display: flex;
     flex-direction: column;
