--- a/src/components/articleTemplate/articleTemplate.scss
+++ b/src/components/articleTemplate/articleTemplate.scss
@@ -31,5 +31,10 @@
         .new-article__btn {
             max-width: 319px;
         }
+
+        .form__error--tags {
+            margin-top: 0;
+            margin-bottom: 5px;
+        }
     }
 }
